fix: Make doc page layout consistent (never wrap)
(rely on media query breakpoints instead)

--- a/_sass/open-project-mixins.scss
+++ b/_sass/open-project-mixins.scss
@@ -239,7 +239,7 @@
   }
 
   @media screen and (min-width: $bigscreen-breakpoint) {
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
 
     > .nav-sidebar {
       flex: 1;
